--- a/subbasin_draft.Rmd
+++ b/subbasin_draft.Rmd
@@ -122,20 +122,24 @@ wql_sub <- wql_sub[grep("Cat 5|Cat 4A", wql_sub$`Listing Status`, ignore.case = 
 wql_sub$`Listing Status` <- gsub("Cat 4A: Water quality limited, TMDL approved", "Cat 4A", wql_sub$`Listing Status`)
 wql_sub[grep("Cat 5", wql_sub$`Listing Status`, ignore.case = TRUE), "Listing Status"] <- "Cat 5"
 
-cat(tbls(name = paste0(subbasin_name, "_wql"), 
-           caption = paste0("Summary of Integrated Report listings for parameters included in the ", subbasin_name,
-                            " Subbasin. Table based on the approved (and partially disapproved) 2012 Integrated Report Listings by the EPA.")
-))
+# cat(tbls(name = paste0(subbasin_name, "_wql"), 
+#            caption = paste0("Summary of Integrated Report listings for parameters included in the ", subbasin_name,
+#                             " Subbasin. Table based on the approved (and partially disapproved) 2012 Integrated Report Listings by the EPA.")
+# ))
 
 wql_sub <- wql_sub %>% group_by(Pollutant) %>% summarise('Segments Impaired' = n())
 
-knitr::kable(wql_sub, format = table_format, padding = 0, digits = 1, row.names = FALSE
-             ) %>% kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+knitr::kable(wql_sub, format = table_format, padding = 0, digits = 1, row.names = FALSE,
+             caption = tbls(name = paste0(subbasin_name, "_wql"), 
+                            caption = paste0("Summary of Integrated Report listings for parameters included in the ", subbasin_name,
+                                             " Subbasin. Table based on the approved (and partially disapproved) 2012 Integrated Report Listings by the EPA.")
+             )
+) %>% table_style()
 
 # knitr::kable(wql_sub, format = table_format, padding = 0, digits = 1, row.names = FALSE
 #              # ,
 #              # caption = tbls(name = paste0(subbasin_name, "_wql_streams"), caption = paste0("Category 4A or Category 5 stream segments within the ", subbasin_name, " Subbasin."))
-#              ) %>% kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+#              ) %>% table_style()
 } else {cat("There are no Category 4A or Category 5 stream segments in this subbasin.")}
 
 ```
@@ -143,7 +147,9 @@ knitr::kable(wql_sub, format = table_format, padding = 0, digits = 1, row.names 
 
 #### Status
 
-```{r status, include = TRUE, results = 'asis'}
+```{r status, include = TRUE, results = 'asis', fig.cap = cap_list, eval.after = 'fig.cap'}
+
+cap_list <- list()
 
 cat(paste0("There are ", length(unique(par_sum_au$AU_ID)), " assessment units within the ", subbasin_name, " subbasin that were included in this report. The following table summarizes the number of attaining, not attaining, and unassessed assessment units by parameter.\n\n"))
 
@@ -154,12 +160,12 @@ au_sum <- par_sum_au %>% group_by(Char_Name) %>%
   mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
   rename(Pollutant = Char_Name)
 
-cat(tbls(name = paste0(subbasin_name, "_au_sum"), caption = paste0("Summary of assessment unit status within the ", subbasin_name, " Subbasin.")))
+# cat(tbls(name = paste0(subbasin_name, "_au_sum"), caption = paste0("Summary of assessment unit status within the ", subbasin_name, " Subbasin.")))
 
 knitr::kable(au_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format
-             # , 
-             # caption = tbls(name = paste0(subbasin_name, "_au_sum"), caption = paste0("Summary of assessment unit status within the ", subbasin_name, " Subbasin."))
-             ) %>% kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+             ,
+             caption = tbls(name = paste0(subbasin_name, "_au_sum"), caption = paste0("Summary of assessment unit status within the ", subbasin_name, " Subbasin."))
+             ) %>% table_style()
 
 cat("\n\n")
 
@@ -173,8 +179,7 @@ ggplot(reshape2::melt(au_sum, id.vars = "Pollutant", variable.name = "Status"))+
   theme_bw()+
   ggtitle("Assessment Unit Attainment Count", subtitle = "Summarized by Pollutant")
 
-cat(paste0("\n![", figs(name = paste0(subbasin_name, "_au_sum_plot"), caption = paste0("Summary plot of assessment unit status within the ", subbasin_name, " Subbasin by parameter.")),
-           "]()"))
+cap_list[[1]] <- figs(name = paste0(subbasin_name, "_au_sum_plot"), caption = paste0("Summary plot of assessment unit status within the ", subbasin_name, " Subbasin by parameter."))
 
 # cat("\n")
 # 
@@ -190,12 +195,12 @@ au_sum_type <- par_sum_au %>% group_by(AU_Type, Char_Name) %>%
   mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
   rename(Pollutant = Char_Name)
 
-cat(tbls(name = paste0(subbasin_name, "_au_type_sum"), caption = paste0(subbasin_name, " Subbasin status summary of assessment units by type.")))
+# cat(tbls(name = paste0(subbasin_name, "_au_type_sum"), caption = paste0(subbasin_name, " Subbasin status summary of assessment units by type.")))
 
 knitr::kable(au_sum_type, padding = 0, digits = 1, row.names = FALSE, format = table_format
-             # ,
-             # caption = tbls(name = paste0(subbasin_name, "_au_type_sum"), caption = paste0(subbasin_name, " Subbasin status summary of assessment units by type."))
-             ) %>% kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+             ,
+             caption = tbls(name = paste0(subbasin_name, "_au_type_sum"), caption = paste0(subbasin_name, " Subbasin status summary of assessment units by type."))
+             ) %>% table_style()
              
 
 cat("\n\n")
@@ -208,12 +213,12 @@ stn_sum <- par_sum %>% group_by(Pollutant) %>%
             Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
   mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
 
-cat(tbls(name = paste0(subbasin_name, "_stn_sum"), caption = paste0("Summary of the status of stations within the ", subbasin_name, " Subbasin.")))
+# cat(tbls(name = paste0(subbasin_name, "_stn_sum"), caption = paste0("Summary of the status of stations within the ", subbasin_name, " Subbasin.")))
 
 knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format
-             # ,
-             # caption = tbls(name = paste0(subbasin_name, "_stn_sum"), caption = paste0("Summary of the status of stations within the ", subbasin_name, " Subbasin."))
-             ) %>% kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+             ,
+             caption = tbls(name = paste0(subbasin_name, "_stn_sum"), caption = paste0("Summary of the status of stations within the ", subbasin_name, " Subbasin."))
+             ) %>% table_style()
 
 cat("\n\n")
 
@@ -227,8 +232,7 @@ ggplot(reshape2::melt(stn_sum, id.vars = "Pollutant", variable.name = "Status"))
   theme_bw()+
   ggtitle("Station Attainment Count", subtitle = "Summarized by Pollutant")
 
-cat(paste0("\n![", figs(name = paste0(subbasin_name, "_stn_sum_plot"), caption = paste0("Summary plot of station status within the ", subbasin_name, " Subbasin by parameter.")),
-           "]()"))
+cap_list[[2]] <- figs(name = paste0(subbasin_name, "_stn_sum_plot"), caption = paste0("Summary plot of station status within the ", subbasin_name, " Subbasin by parameter."))
 
 # cat("\n")
 # 
@@ -251,10 +255,11 @@ stn_sum <- par_sum %>% group_by(Pollutant) %>%
   ) %>% 
   mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
 
-cat(tbls(name = paste0(subbasin_name, "_stn_trend_sum"), caption = paste0(subbasin_name, " Subbasin summary of trends at stations across the state.")))
+# cat(tbls(name = paste0(subbasin_name, "_stn_trend_sum"), caption = paste0(subbasin_name, " Subbasin summary of trends at stations across the state.")))
 
-knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format
-             ) %>% kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format,
+             caption = tbls(name = paste0(subbasin_name, "_stn_trend_sum"), caption = paste0(subbasin_name, " Subbasin summary of trends at stations across the state."))
+             ) %>% table_style()
 
 cat("\n\n")
 ```
@@ -278,7 +283,7 @@ cat("\n\n")
   capnum <- tbls(paste0(subbasin_name, "_owriTab"), display = "num")
 
   t <- knitr::kable(owri_huc8, format = table_format, padding = 0, digits = 1, row.names = FALSE
-                    ) %>% kableExtra::kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+                    ) %>% table_style()
   
   print(t)
   
