--- a/state_basin_summary.Rmd
+++ b/state_basin_summary.Rmd
@@ -178,6 +178,7 @@ n_types <- length(unique(param_sum_au$AU_Type))
 parameters <- odeqstatusandtrends::AWQMS_to_standard(unique(param_sum_au$Char_Name))
 n_params <- length(unique(param_sum_au$Char_Name))
 list_fun <- function(x){paste(x, collapse = "s', '")}
+param_summary <- unique(param_sum$Pollutant)
 
 # cat("## Status and Trend")
 cat("\n\n")
@@ -190,7 +191,7 @@ cat(paste0("The ", name, " basin is listed for ", length(unique(wql_data$POLLUTA
 
 cat("## Parameter Maps\n\n")
 
-cat(paste("The maps below show the stations included in the analysis for each parameter. Stations are color coded by current status. The Water Quality Listed streams for each parameter are included in the maps as red lines."), "\n\n")
+cat(paste("The maps in ",figs(paste0(name, "_", param_summary[1], "_map"), display = 'cite')," through ",figs(paste0(name, "_", param_summary[length(param_summary)], "_map"), display = 'cite')," show the stations included in the analysis for each parameter. Stations are color coded by current status. The water quality listed streams for each parameter are included in the maps as red lines."), "\n\n")
 
 for(i in unique(param_sum$Pollutant)){
   if(i != "pH"){
@@ -256,7 +257,7 @@ for(i in unique(param_sum$Pollutant)){
 
 cat("## Status\n\n")
 
-cat(paste0("The table below shows the number of attaining, not attaining, and unassessed assessment units by parameter.\n\n"))
+cat(paste0(tbls(name = paste0(name, "_au_sum"), display = 'cite'), " shows the number of attaining, not attaining, and unassessed assessment units by parameter.\n\n")))
 
 au_sum <- param_sum_au %>% group_by(Char_Name) %>% 
   summarise(Attaining = sum(status_2015_2018 == "Attaining"),
@@ -291,7 +292,7 @@ cap_list[[1]] <- figs(name = paste0(name, "_au_sum_plot"), caption = paste0("Sum
 # cat(figs(name = paste0(name, "_au_sum_plot"), caption = paste0("Summary plot of assessment unit status within the ", name, " Basin by parameter.")))
 # fignum <- fignum + 1
 
-cat(paste0("\n\nBelow is a summary of the number of attaining, not attaining, and unassessed assessment units by parameter and assessment unit type.\n\n"))
+cat(paste0("\n\n",tbls(name = paste0(name, "_au_type_sum"), display = 'cite')," and ", figs(name = paste0(name, "_au_sum_plot"), display = 'cite')," summarizes the number of attaining, not attaining, and unassessed assessment units by parameter and assessment unit type within the ", name," Basin.\n\n"))
 
 au_sum_type <- param_sum_au %>% group_by(AU_Type, Char_Name) %>% 
   summarise(Attaining = sum(status_2015_2018 == "Attaining"),
@@ -310,7 +311,7 @@ knitr::kable(au_sum_type, padding = 0, digits = 1, row.names = FALSE, format = t
 
 cat("\n\n")
 
-cat(paste0("\n\nThe following table summarizes the number of attaining, not attaining, and unassessed stations by parameter.\n\n"))
+cat(paste0("\n\n", tbls(name = paste0(name, "_stn_sum"), display = 'cite')," and ", figs(name = paste0(name, "_stn_sum_plot"), display = 'cite')," summarizes the number of attaining, not attaining, and unassessed stations by parameter.\n\n"))
 
 stn_sum <- param_sum %>% group_by(Pollutant) %>% 
   summarise(Attaining = sum(status_2015_2018 == "Attaining"),
@@ -347,7 +348,7 @@ cap_list[[2]] <- figs(name = paste0(name, "_stn_sum_plot"), caption = paste0("Su
 cat("\n\n")
 cat("## Trend\n\n")
 
-cat(paste0("\n\nA summary of the trends across parameters is shown in the table below. Note that trend requires significantly more data than status and may result in many stations with sufficient data for assessing status, but insuffient data for assessing trend.\n\n"))
+cat(paste0("\n\nA summary of the trends across parameters is shown in ",tbls(name = paste0(name, "_stn_trend_sum"), display="cite"),". Note that trend requires significantly more data than status and may result in many stations with sufficient data for assessing status, but insufficient data for assessing trend.\n\n"))
 
 stn_sum <- param_sum %>% group_by(Pollutant) %>% 
   summarise(Improving = sum(trend == "Improving"),
