--- a/state_basin_summary.Rmd
+++ b/state_basin_summary.Rmd
@@ -37,7 +37,7 @@ knitr::opts_chunk$set(echo = FALSE,
                       cache = FALSE,
                       include = TRUE,
                       fig.keep='all',
-                      fig.path='Figures/',
+                      fig.path=paste0(out_dir, "/Figures/"),
                       fig.width = 12, 
                       fig.height = 6)
 
@@ -116,7 +116,7 @@ landuse_output <- NULL
 #                       par_sum = data))
 # )
 
-landuse_output <- knitr::knit_child("N:/Status_and_Trend_Reports/Report_Files/state_landuse_summary.Rmd", envir = globalenv())
+landuse_output <- knitr::knit_child("state_landuse_summary.Rmd", envir = globalenv())
 
 ```
 
@@ -191,7 +191,7 @@ cat(paste0("The ", name, " basin is listed for ", length(unique(wql_data$POLLUTA
 
 cat("## Parameter Maps\n\n")
 
-cat(paste("The maps in ",figs(paste0(name, "_", param_summary[1], "_map"), display = 'cite')," through ",figs(paste0(name, "_", param_summary[length(param_summary)], "_map"), display = 'cite')," show the stations included in the analysis for each parameter. Stations are color coded by current status. The water quality listed streams for each parameter are included in the maps as red lines."), "\n\n")
+cat(paste("The maps in ", figs(paste0(name, "_", param_summary[1], "_map"), display = 'cite')," through ", figs(paste0(name, "_", param_summary[length(param_summary)], "_map"), display = 'cite')," show the stations included in the analysis for each parameter. Stations are color coded by current status. The water quality listed streams for each parameter are included in the maps as red lines."), "\n\n")
 
 for(i in unique(param_sum$Pollutant)){
   if(i != "pH"){
@@ -257,7 +257,7 @@ for(i in unique(param_sum$Pollutant)){
 
 cat("## Status\n\n")
 
-cat(paste0(tbls(name = paste0(name, "_au_sum"), display = 'cite'), " shows the number of attaining, not attaining, and unassessed assessment units by parameter.\n\n")))
+cat(paste0(tbls(name = paste0(name, "_au_sum"), display = 'cite'), " shows the number of attaining, not attaining, and unassessed assessment units by parameter.\n\n"))
 
 au_sum <- param_sum_au %>% group_by(Char_Name) %>% 
   summarise(Attaining = sum(status_2015_2018 == "Attaining"),
@@ -431,7 +431,7 @@ for(i in unique(param_sum$HUC8)){
   #                       par_sum = data))
   # )
 
-  subbasin_output <- c(subbasin_output, knitr::knit_child("subbasin_draft.Rmd", envir = globalenv()))
+  subbasin_output <- c(subbasin_output, knitr::knit_child("state_subbasin_summary.Rmd", envir = globalenv()))
   
   capnum <- as.numeric(capnum)
   
