--- a/state_basin_summary.Rmd
+++ b/state_basin_summary.Rmd
@@ -303,7 +303,7 @@ au_sum_type <- param_sum_au %>% group_by(AU_Type, Char_Name) %>%
             "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
             Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
   mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
-  rename(Pollutant = Char_Name)
+  rename("AU Type" = AU_Type, Pollutant = Char_Name)
 
 # cat(tbls(name = paste0(name, "_au_type_sum"), caption = paste0(name, " Basin status summary of assessment units by type.")))
 
