--- a/state_basin_summary.Rmd
+++ b/state_basin_summary.Rmd
@@ -98,6 +98,8 @@ if(!dir.exists(paste0(project_dir, "/Maps"))) {dir.create(paste0(project_dir, "/
 
 # `r name` Basin
 
+A summary of status and trend results for the `r name` Basin and subbasins within the `r name` Basin are presented in this section. Full tabular results including results for each station, assessment unit, exursion statistics, and the summary of best managment practices implemented are provided in Appendix `r a.letter`.
+
 ```{r basinIntro, include = TRUE, results = 'asis'}
 wql_data <- read.csv('//deqhq1/WQNPS/Status_and_Trend_Reports/Lookups_Statewide/wq_limited_2012_df_temp_bact_ph_DO_TP_Sediment.csv',
                      stringsAsFactors = FALSE)
